rate-manipulation to be done

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <button value="50" class="rate-button">50%</button>
           <input class="rate-button editable"  placeholder="Custom"/>
       </div>
-      <span style="color: hsl(184, 14%, 56%);"> Number of People<small id="warning"></small><span class="warning">Can't be zero</span></span><br>
+      <span style="color: hsl(184, 14%, 56%);display: flex;"> Number of People<small id="warning">Can't be zero</small></span></span><br>
       <input class="people-input" placeholder="0"/>
     </div>
     <div class="result">
