--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
   
 </head>
 <body>
+  <div class="heading"> 
+    <h1>SPLI</h1>
+    <h1>TTER</h1>
+  </div>
   <main class="main">
+    
     <div class="select-inputs">
       <span>Bill</span>
       <br>
