--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
           <button value="50" class="rate-button">50%</button>
           <input type="number" min="0" class="rate-button editable"  placeholder="Custom"/>
       </div>
-      <span style="color: hsl(184, 14%, 56%);display: flex;"> Number of People<small id="warning">Can't be zero</small></span></span><br>
+      <span style="color: hsl(184, 14%, 56%);display: flex;"> Number of People<small id="warning">Can't be zero</small></span></span>
+      <!-- <br> -->
       <input type="number" min="0" class="people-input" placeholder="0"/>
     </div>
     <div class="result">
