--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
     </div>
   </div>
 </main>
-  <footer>
+<!--   <footer> -->
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Adhishreya</a>.
   </div>
-  <footer>
+<!--   <footer> -->
 
   <script src="./script.js"></script>
 </body>
